--- a/style.css
+++ b/style.css
@@ -2,14 +2,65 @@
 @import './node_modules/bootstrap-icons/font/bootstrap-icons.css';
 
 .header {
-    background-color: #7952B3;
+    background-color: #0D6EFD;
+    width: 100%;
+    padding: 0.8rem 0;
+    margin: 0 0 2rem 0;
+    z-index: 99;
+    box-shadow: 1px 0 10px #00000075;
 }
+
+.logo {
+    width: 70px;
+    height: 70px;
+    filter: invert(1);
+    object-fit: contain;
+}
+
+.categories a {
+    border: 1px solid black;
+    text-align: center;
+    padding: 0.5rem 0;
+    text-decoration: none;
+    color: black;
+    /* margin: 0 1rem; */
+    transition: all 125ms ease-in-out;
+}
+
+.categories a:hover {
+    background-color: black;
+    color: white;
+}
+
+.categories a.active {
+    background-color: black;
+    color: white;
+}
+
+.categories a:first-child {
+    margin-left: 0;
+}
+
+.categories a:last-child {
+    margin-right: 0;
+}
+
 .bi {
     position: relative;
 }
+
 .bi::before, [class^="bi-"]::before, [class*=" bi-"]::before {
     font-size: 32px;
     filter: invert(1);
+}
+
+.card {
+    transition: all 125ms ease-in-out;
+}
+
+.card:hover {
+    background-color: #fbfbfb;
+    box-shadow: 1px 1px 15px #0000003b;
 }
 
 #items-count-in-cart {
@@ -44,6 +95,120 @@ img {
     object-fit: contain;
 }
 
+.increment-amount {
+    display: block;
+    margin-left: 1rem;
+    background-image: url('img/add.png');
+    background-position: center center;
+    background-size: 70%;
+    background-repeat: no-repeat;
+}
+
+.decrement-amount {
+    display: block;
+    margin-left: 0.5rem;
+    background-image: url('img/remove.png');
+    background-size: 60%;
+    background-position: center center;
+    background-repeat: no-repeat;
+}
+
+.increment-amount,
+.decrement-amount {
+    width: 1.7rem;
+    height: 1.7rem;
+    border: 1px solid black;
+    border-radius: 3px;
+}
+
+.item-row {
+    padding: 0.5rem;
+    border-radius: 5px;
+
+}
+
+.item-row:nth-child(2n+0) {
+    background-color: rgb(242, 242, 242);
+}
+
+.modal-footer {
+    padding: 0;
+}
+
+.sum-info,
+.discount-container {
+    font-weight: bold;
+    display: block;
+    margin: 0;
+    padding: 0.3rem 1rem 0.3rem 0;
+    width: 100%;
+    text-align: right;
+    background-color: rgb(242, 242, 242);
+}
+
+.discount-container {
+    background-color: rgb(121, 212, 123);
+}
+
+.line-through {
+    text-decoration: line-through;
+    font-style: italic;
+    font-weight: normal;
+}
+
+.modal-button {
+    margin: 1.5rem 1rem 1rem 0;
+}
+
+.carousel {
+    margin: 0 0 2.5rem 0;
+    height: 350px !important;
+}
+
+.carousel-inner {
+    height: 350px !important;
+}
+
+.carousel-item {
+    width: 100%;
+    height: 250px;
+}
+
+.carousel-item img {
+    display: block;
+    width: 100% !important;
+    height: 350px !important;
+    max-width: unset !important;
+    max-height: unset !important;
+    object-fit: cover;
+}
+
+.discount {
+    text-transform: upper;
+}
+
 .hide {
     display: none !important;
+}
+
+@media (max-width: 990px) {
+    .category:first-child {
+        margin-bottom: 0.5rem;
+    }
+
+    .categories {
+        margin-bottom: 1rem;
+    }
+}
+
+@media (max-width: 890px) {
+    .categories {
+        margin-bottom: 1rem;
+    }
+}
+
+@media (max-width: 574px) {
+    .category:not(:first-child) {
+        margin-bottom: 0.5rem;
+    }
 }
